Small fix for position of ocw icon on mobile.

--- a/app/src/css/main.scss
+++ b/app/src/css/main.scss
@@ -65,9 +65,10 @@ body {
 #ocw-logo-mobile {
     width: 36px;
     height: 36px;
-    top: 8px;
+    top: 50%;
     left: 50%;
     margin-left: -18px;
+    margin-top: -18px;
 }
 
 /* BOOTSTRAP EXTENSIONS / OVERRIDES */
